--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
+    "nodemon": "^2.0.16",
     "path": "^0.12.7",
     "redis": "^3.0.2",
     "socket.io": "^2.4.1",
