--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.16",
     "path": "^0.12.7",
+    "path-to-regexp": "^6.2.1",
     "read-excel-file": "^5.6.1",
     "redis": "^3.1.2",
     "sequelize": "^6.32.1",
